# meta-signal-harness

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  skills.md
src/: lib.rs
tests/: round_trip.rs
